@@ -19,5 +19,10 @@ pyyaml
 uritemplate
 drf-spectacular
 newspaper3k
+trafilatura
 transformers
 torch
+django-allauth
+drf-oidc-auth
+#django-oidc-auth
+git+https://github.com/intelie/django-oidc-auth.git
