@@ -2039,7 +2039,46 @@ Old version (Angular JS): <strong><a href="https://clarin.ellogon.org" target="_
     
 	<h1 id="pg-f778c900e160fa44570fdece73d42a4e">5.1 - Inter-rater Reliability</h1>
     
-	
+	<h2 id="inter-annotator-agreement">Inter-Annotator Agreement</h2>
+<p>In order to assess the quality of annotation of a task, <strong>Inter-Rater Reliability</strong> or <strong>Inter-Annotator Agreement</strong> (both terms are equivalent) is frequently used. It all stems down to the consensus among multiple annotators when annotating the same documents, within the context of the same annotation task.</p>
+<p>The Ellogon Annotation Platform offers facilities for inspecting the annotations over arbitrary sets of Documents, and perform comparisons among different annotation sets, typically created by different annotators.</p>
+<p>A typical workflow for measuring inter-annotator agreement among annotators is:</p>
+<ol>
+<li>A set of annotators annotate the same resource (i.e. a textual document). Each annotator can privately annotate a copy of the original resource, or annotate the same, shared resource, limiting the display of annotations to his/her own annotations only, through the settings.</li>
+<li>When all annotators have finished their annotations, the inter-annotation agreement can be calculated by the Ellogon Annotation Platform.</li>
+<li>A user that has access to all annotated resources by all annotators, can select the <code>Inspection</code> menu entry of the left panel, as shown in Figure 1. There are several available options for a) comparing annotation within a single resource (<code>Compare Annotations</code>); b) comparing annotations between two different resources (assuming they both contain the same data, i.e. text) (<code>Compare Documents   </code>); and c) compare annotations from arbitrary sets of documents (<code>Compare Collections</code>).</li>
+</ol>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<span class="post-img" style="width:auto;">
+    <img src="https://iit-demokritos.github.io/clarin-el-annotation-tool//images/screenshots/inspection/compare-annotations/inspection-compare-annotations-menu.png" style="width:auto; opacity:100%" alt="Figure 1: `Inspection` menu." />
+    <p>Figure 1: `Inspection` menu.</p>
+</span>
+
+
+<h3 id="comparing-annotations">Comparing Annotations</h3>
+<p>This comparison option assumes that a single document has been annotated by multiple annotators, thus different annotations sets created by more than one annotators exist.</p>
+
 </div>
 
 
